footer fix for bio page, hero text aligned for responsiveness, main nav fix for transition to hamburger responsiveness, and link put on projects page for GitHub.

--- a/styles.css
+++ b/styles.css
@@ -174,29 +174,32 @@ li .current{
     text-align: center;
     position: absolute;
     background-size: contain;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%,-50%);
+    width: 80%;
 }
 
 .hero div h1{
     font-family: pacifico;
     font-size: 3em;
-
+    margin: 1em;
+    line-height: 1.5em;
 }
 
 .hero div h2{
     font-family: quicksand;
     border-bottom: none;
+    margin: 1em;
+    padding: 0;
 }
-
 
 
 #indexp{
     display: block;
     padding: 1em 20% 1em 20%;
     font-family: quicksand;
-    color: #FD9563;
+    color: #50333B;
     font-size: 1.5em;
     line-height: 1.75em;
 }
@@ -205,12 +208,19 @@ li .current{
 
 .biographyMain {
     display: flex;
+    flex-direction: column;
+    
+}
+
+.pictureOverlay {
+    align-self: center;
 }
 
 
 #profile{
     max-width: 438px;
-    max-height: 640px;
+    max-height: 600px;
+    
 }
 
 .biographyMain h1{
@@ -220,23 +230,24 @@ li .current{
    margin-left: 5%;
 } 
 
-.biographyMain section{
+/* .biographyMain section{
     display: flex;
     flex-direction: column;
     padding: 1em;
     height: 640px;
- } 
+ }  */
 
- .biographyMain section p {
+ .biographyMain  p {
     margin: 1% 5% 1%;
     font-size: 1.25em;
-    line-height: 1.5em;
+    line-height: 2em;
 }
 
-.biographyMain section p:nth-last-of-type(1) {
-    margin-top: auto;
-    padding-bottom: 2em;
+.biographyMain  p:nth-last-of-type(1) {
+    /* margin-top: auto; */
+    margin-bottom: 2em;
 }
+
 
 
 /******   RESUME  ******/
@@ -313,6 +324,13 @@ aside h3{
     margin-top: 1em;
 }
 
+.galleryHeader {
+    border-bottom: solid 2px #FD9563;
+    font-size: 2em;
+    padding: .5em;
+    margin: 1em;
+}
+
 .galleryMain ul{
     margin-top: 2em;
     display: flex;
@@ -345,7 +363,8 @@ aside h3{
     flex-wrap: wrap;
 }
 
-.projectsMain h3{
+.projectsMain h1,
+.contactMeHeader{
     font-size: 2em;
     padding: .5em;
     margin: 1em;
@@ -403,15 +422,20 @@ legend{
     border-bottom: solid 2px #FD9563;
 }
 
-/* input:invalid {
-    border-color: rgb(172, 0, 0);
-    background-color: rgba(212, 69, 76, 0.541);
-} */
+fieldset {
+    margin-bottom: 30px;
+}
+
+input {
+    display: block;
+    margin-left: 30px;
+}
 
 form fieldset div,
 textarea{
     max-width: 60%;
-    padding: .5em 0;
+    /* padding: .5em 0; */
+    margin: 0;
 }
 
 textarea{
@@ -439,10 +463,10 @@ footer{
     
 }
 
-.fixedFooter{
+/* .fixedFooter{
     bottom: 0;
     left: 0;
-}
+} */
 
 footer ul{
     padding: 3em auto;
@@ -462,6 +486,9 @@ footer li{
     padding: 1px;
 }
 
+footer p {
+    color: #FD9563;
+}
 
 
 
@@ -469,12 +496,20 @@ footer li{
 /******  MEDIA QUERIES ******/
 
 @media only screen and (max-width: 1100px){
+
+    /*MAIN NAV*/
+
+    .mainHeader div p {
+        margin-left: 0;
+        margin-right: 0;
+    }
     
     /*BIOGRAPHY*/
 
     .biographyMain{
         flex-direction: column;
         justify-content: center;
+        clear: both;
     }
 
     .pictureOverlay {
@@ -488,8 +523,7 @@ footer li{
 
     .biographyMain img {
         align-self: center;
-        /* clip-path: inset(10px 10px 200px 10px); */
-        height: 420px;
+        height: 445px;
         width: 300px;
         margin-top: -25px;
     }
@@ -549,6 +583,10 @@ footer li{
         margin: 1em;
     }
 
+    .biographyMain section{
+        min-height: 640px;
+     } 
+
       /*CONTACT*/
       fieldset div  {
         margin-bottom: 30px;
@@ -578,9 +616,19 @@ footer li{
     }
 
     .hero div {
-        top: 65%;
+        top: 40%;
+        width: 70%;
     }
 
+    .hero div h1 {
+        margin: 1em 0;
+        font-size: 2em;
+    }
+
+    .hero div h2 {
+        margin: 1em 0;
+        font-size: 1em;
+    }
    
     footer{
         margin-top: 2em;
@@ -594,14 +642,18 @@ footer li{
         font-size: .75em;
     }
 
-    main{
+    .biographyMain{
         flex-direction: column;
+        max-height: 100%;
+        
     }
 
     #profile{
         max-width: 100%;
         height: auto;
     }
+
+   
 
     /*RESUME*/
 
@@ -662,6 +714,13 @@ footer li{
         max-width: 100%;
      }
 
+
+
+     /*CONTACT*/
+     
+     textarea {
+         max-width: 100%;
+     }
 
    
 
